# rad

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  KNOWN_ISSUES.md  LICENSE  NAMESPACE  README.md  barcodes.csv  penmp  tmp_batch.csv  tmp_test.fq
-L/: bulk_layout.csv  bulk_position_map.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
R/: RcppExports.R  prep_seq.R  r_commands.R  rad-package.R  rad.R  rad_run.R  rad_run_v2.R  stat_collector.R
R_workspace/: rad_cli_run.R
R_workspace/r_commands/: prep_seq.R  r_legacy_commands.R  stat_collector.R
R_workspace/shiny_gui/: interface_shiny_v2.R
R_workspace/synthetic_data/: sim_rep.R  sim_rep_v3.R  sim_rep_v4_cmv.R  sim_rep_v5_cmv.R  sim_rep_v6_cmv.R
cmake/: rad-wrapper.sh
docs/: README.md  architecture.md  cli-reference.md  installation.md  layouts-and-whitelists.md  output-files.md  quickstart.md  troubleshooting.md
include/gzstream/: gzstream.h
include/rad/: barcode_correction.hpp  io_streaming.hpp  misc_utils.hpp  rad_headers.h  read_layout.hpp  seqspec.hpp  sigstring.hpp  synthetic_generator.hpp  whitelist_generator.hpp
inst/scripts/: rad_run.R
man/: rad-package.Rd
recipe/: build.sh  conda_build_config.yaml  meta.yaml
resources/read_layout/: curio_sc_read_layout.csv  curio_trekker_read_layout.csv  five_prime_read_layout.csv  np_bulk.csv  np_bulk_read_layout.csv  sctagger_sim_read_layout.csv  splitseq_read_layout.csv  three_prime_read_layout.csv  visium_hd_read_layout.csv  visium_three_prime_read_layout.csv
scripts/: rad_run.R
src/: .gitignore  Makevars  RcppExports.cpp  alignment_tools.cpp  badread_sim.cpp  barcode_editing.cpp  barcode_test.cpp  config_tools.cpp  consolidate_headers.cpp  container_layout.cpp  container_layout_v2.cpp  container_layout_v3.cpp  container_layout_v6.cpp  discover_layout.cpp  kseq.h  main.cpp  rad.h  read_annotation_commands.cpp  sequence_manipulation.cpp  streaming_tools.cpp  synthetic_main.cpp  whitelist_generator.cpp
src_workspace/: barcode_dl_try.cpp  container_layout_v4.cpp  container_layout_v5.cpp  container_layout_v6.cpp  container_layout_v7.cpp  read_annotation_test.cpp  read_layout_container.cpp  sigstring_container.cpp  stream_fastas.cpp  streaming_tools_v2.cpp  streaming_tools_v3.cpp  uk.cc  uk.h  varscan.cpp
test_data/: README.md
